--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,12 +1,12 @@
 <idea-plugin>
     <id>com.mnw.tabmover</id>
     <name>TabMover</name>
-    <version>1.4.0</version>
+    <version>1.5.0</version>
     <vendor email="mikinw.development@gmail.com" url="https://github.com/mikinw/TabMover">MikiNW</vendor>
     <description>
       <![CDATA[
         TabReorder plugin allows to reorder and move editor tabs using keyboard shortcuts.
-        <br>Default shortcuts, but I recommend checking them with your current keymap:
+        <br>Default shortcuts, but I recommend checking them with your current keymap (on Mac Control is the Cmd):
         <br>- <i>Control+Alt+Shift+Left</i> to move tab left;
         <br>- <i>Control+Alt+Shift+Right</i> to move tab right;
         <br>- <i>Control+Alt+Shift+Up</i> to make tab first;
@@ -22,7 +22,7 @@
         <br>- <i>Control+Alt+Shift+P,T</i> to pin all tabs that are not pinned. Or if all tabs are pinned, unpin all;
         <br>- <i>Alt+Shift+T</i> show action popup with possible actions;
         <br>The plugin is open source (LGPL).
-        1.4
+        1.5
         <p>If you find this plugin useful, please consider inviting me for a beer.
         I develop this plugin in my free time and I'm more motivated when I have a beer on desk :-)
 
@@ -33,6 +33,7 @@
     <change-notes>
       <![CDATA[
         <ul>
+          <li>1.5 - removing deprecated call that prevented the plugin from being used in IU-223.* and above</li>
           <li>1.4 - make actions dumb aware</li>
           <li>1.3 - pin all tabs, move pinned tabs to start, action popup</li>
           <li>1.2 - move tab to new window</li>
@@ -42,7 +43,7 @@
       ]]>
     </change-notes>
 
-    <idea-version since-build="191"/>
+    <idea-version since-build="221"/>
     <depends>com.intellij.modules.lang</depends>
 
     <actions>
